chore: remove deprecated environment configuration files
DELETION SUMMARY:
- Removed obsolete environment configuration files: .env.enterprise, .env.modern.example, .env.simple, .env.simplified, .env.test, and associated docker-compose files.
- This cleanup reduces clutter and focuses on maintaining only relevant configuration files for current deployment modes.

RESULT: Streamlined configuration management by eliminating outdated files, ensuring a cleaner project structure.

--- a/.env.example
+++ b/.env.example
@@ -1,213 +1,189 @@
-# AI Documentation Vector DB - Environment Variables Template
-# Copy this file to .env and replace the placeholder values with your actual API keys
+# AI Documentation Vector DB - Unified Environment Configuration Template
+# Copy this file to .env and customize based on your deployment mode (simple/enterprise)
+# All configuration uses AI_DOCS__ prefix for nested settings via Pydantic
+# Required vars marked with *, optional with defaults or comments
 
-# ========== Core API Keys ==========
+# ========== Application Mode & Environment ==========
+# * Required: Choose deployment mode
+AI_DOCS__MODE=simple  # simple (solo dev, minimal) or enterprise (full features, monitoring)
 
-# OpenAI API Key (required for OpenAI embeddings)
-# Get your key at: https://platform.openai.com/api-keys
-OPENAI_API_KEY=sk-your-openai-api-key-here
+# * Required: Environment type
+AI_DOCS__ENVIRONMENT=development  # development, testing, staging, production
 
-# Firecrawl API Key (optional, for premium web scraping features)
-# Get your key at: https://www.firecrawl.dev/
-FIRECRAWL_API_KEY=fc-your-firecrawl-api-key-here
+# Debug and logging
+AI_DOCS__DEBUG=false  # true for development, false for production
+AI_DOCS__LOG_LEVEL=INFO  # DEBUG, INFO, WARNING, ERROR, CRITICAL
 
-# Qdrant API Key (optional, for Qdrant Cloud)
-# Leave empty for local Qdrant instance
-QDRANT_API_KEY=
+# ========== Provider Selection ==========
+# * Required: Embedding provider
+AI_DOCS__EMBEDDING_PROVIDER=fastembed  # fastembed (local, no API key) or openai (cloud)
+
+# * Required: Crawling provider
+AI_DOCS__CRAWL_PROVIDER=crawl4ai  # crawl4ai (fast, local) or firecrawl (premium, API key)
+
+# ========== API Keys (Mode-Dependent) ==========
+# OpenAI (required if AI_DOCS__EMBEDDING_PROVIDER=openai or HyDE enabled)
+AI_DOCS__OPENAI__API_KEY=sk-your-openai-api-key-here
+
+# Firecrawl (required if AI_DOCS__CRAWL_PROVIDER=firecrawl)
+AI_DOCS__FIRECRAWL__API_KEY=fc-your-firecrawl-api-key-here
+
+# Qdrant Cloud (optional, leave empty for local)
+AI_DOCS__QDRANT__API_KEY=
 
 # ========== Service URLs ==========
+# * Required: Qdrant Vector Database
+AI_DOCS__QDRANT__URL=http://localhost:6333  # Local Docker or cloud URL
 
-# Qdrant Vector Database URL
-# Default: http://localhost:6333 (local Docker instance)
-QDRANT_URL=http://localhost:6333
+# Redis/Dragonfly Cache (enterprise mode)
+AI_DOCS__CACHE__REDIS_URL=redis://localhost:6379
 
-# DragonflyDB Cache URL (Redis-compatible)
-# Default: redis://localhost:6379 (local DragonflyDB instance, Redis protocol)
-REDIS_URL=redis://localhost:6379
-
-# ========== FastMCP Streaming Configuration ==========
-# These settings optimize MCP server performance for large search results
-
-# Transport type: streamable-http (optimal) or stdio (Claude Desktop)
-FASTMCP_TRANSPORT=streamable-http
-
-# Host for HTTP transport (only used with streamable-http)
-FASTMCP_HOST=127.0.0.1
-
-# Port for HTTP transport (only used with streamable-http)
-FASTMCP_PORT=8000
-
-# Response buffer size in bytes (default: 8192)
-# Increase for better performance with large results
-FASTMCP_BUFFER_SIZE=8192
-
-# Maximum response size in bytes (default: 10485760 = 10MB)
-# Increase if working with very large search results
-FASTMCP_MAX_RESPONSE_SIZE=10485760
-
-# ========== Unified Configuration (AI_DOCS__ prefix) ==========
-# These use the AI_DOCS__ prefix for nested configuration
-
-# Application Settings
-AI_DOCS__ENVIRONMENT=development              # development, testing, production
-AI_DOCS__DEBUG=false                          # Enable debug mode
-AI_DOCS__LOG_LEVEL=INFO                       # DEBUG, INFO, WARNING, ERROR, CRITICAL
-
-# Provider Selection
-AI_DOCS__EMBEDDING_PROVIDER=fastembed         # fastembed (local) or openai (cloud)
-AI_DOCS__CRAWL_PROVIDER=crawl4ai              # crawl4ai (fast) or firecrawl (premium)
-
-# Performance Tuning
-AI_DOCS__PERFORMANCE__MAX_CONCURRENT_CRAWLS=10
+# ========== Performance Tuning ==========
+# Concurrent operations (adjust based on hardware)
+AI_DOCS__PERFORMANCE__MAX_CONCURRENT_CRAWLS=10  # simple: 5, enterprise: 50
 AI_DOCS__PERFORMANCE__MAX_CONCURRENT_EMBEDDINGS=32
 AI_DOCS__PERFORMANCE__REQUEST_TIMEOUT=30
-AI_DOCS__PERFORMANCE__MAX_MEMORY_USAGE_MB=1000
+AI_DOCS__PERFORMANCE__MAX_MEMORY_USAGE_MB=1000  # simple: 500, enterprise: 4000
 
-# Cache Configuration
+# Batch sizes
+AI_DOCS__BATCH__EMBEDDING_BATCH_SIZE=100  # simple: 10, enterprise: 200
+AI_DOCS__BATCH__CRAWL_BATCH_SIZE=50
+
+# ========== Cache Configuration ==========
 AI_DOCS__CACHE__ENABLE_CACHING=true
-AI_DOCS__CACHE__ENABLE_LOCAL_CACHE=true       # In-memory caching
-AI_DOCS__CACHE__ENABLE_REDIS_CACHE=true       # DragonflyDB caching
-AI_DOCS__CACHE__REDIS_URL=redis://localhost:6379
-AI_DOCS__CACHE__TTL_EMBEDDINGS=86400          # 24 hours
-AI_DOCS__CACHE__TTL_CRAWL=3600                # 1 hour
-AI_DOCS__CACHE__TTL_QUERIES=7200              # 2 hours
-AI_DOCS__CACHE__TTL_HYDE=14400                # 4 hours
+AI_DOCS__CACHE__ENABLE_LOCAL_CACHE=true  # In-memory for all modes
+AI_DOCS__CACHE__ENABLE_REDIS_CACHE=false  # true for enterprise only
 
-# OpenAI Settings (when using OpenAI provider)
-AI_DOCS__OPENAI__API_KEY=sk-your-openai-api-key-here
+# TTLs (seconds)
+AI_DOCS__CACHE__TTL_EMBEDDINGS=86400  # 24 hours
+AI_DOCS__CACHE__TTL_CRAWL=3600  # 1 hour
+AI_DOCS__CACHE__TTL_QUERIES=7200  # 2 hours
+AI_DOCS__CACHE__TTL_HYDE=14400  # 4 hours
+
+# Cache sizes (enterprise)
+AI_DOCS__CACHE__LOCAL_MAX_SIZE=1000  # simple: 500, enterprise: 10000
+AI_DOCS__CACHE__LOCAL_MAX_MEMORY_MB=100  # simple: 50, enterprise: 1000
+
+# ========== OpenAI Settings ==========
+# Model and dimensions (if using OpenAI)
 AI_DOCS__OPENAI__EMBEDDING_MODEL=text-embedding-3-small
 AI_DOCS__OPENAI__DIMENSIONS=1536
-# AI_DOCS__OPENAI__API_BASE=https://api.openai.com/v1  # Optional custom endpoint
+AI_DOCS__OPENAI__API_BASE=https://api.openai.com/v1  # Optional custom endpoint
 
-# Qdrant Settings
-AI_DOCS__QDRANT__URL=http://localhost:6333
-AI_DOCS__QDRANT__API_KEY=                     # For Qdrant Cloud
-AI_DOCS__QDRANT__DEFAULT_COLLECTION=documentation
-AI_DOCS__QDRANT__GRPC_PORT=6334               # For high-performance gRPC
-AI_DOCS__QDRANT__USE_GRPC=false               # Enable gRPC instead of HTTP
-
-# Firecrawl Settings (when using Firecrawl provider)
-AI_DOCS__FIRECRAWL__API_KEY=fc-your-firecrawl-api-key-here
-AI_DOCS__FIRECRAWL__API_BASE=https://api.firecrawl.dev
-
-# Security Configuration
-AI_DOCS__SECURITY__MAX_QUERY_LENGTH=1000
-AI_DOCS__SECURITY__MAX_URL_LENGTH=2048
-AI_DOCS__SECURITY__RATE_LIMIT_REQUESTS_PER_MINUTE=60
-AI_DOCS__SECURITY__ALLOWED_DOMAINS=["*"]      # JSON array of allowed domains
-AI_DOCS__SECURITY__REQUIRE_API_KEYS=true
-AI_DOCS__SECURITY__ENABLE_RATE_LIMITING=true
-
-# Directory Paths
-AI_DOCS__DATA_DIR=./data                      # Persistent data storage
-AI_DOCS__CACHE_DIR=./cache                    # Temporary cache files
-AI_DOCS__LOGS_DIR=./logs                      # Application logs
-
-# HyDE (Hypothetical Document Embeddings) Configuration
-AI_DOCS__HYDE__ENABLED=true
+# HyDE (Hypothetical Document Embeddings) - enterprise only
+AI_DOCS__HYDE__ENABLED=false  # true for enterprise
 AI_DOCS__HYDE__MODEL=gpt-3.5-turbo
 AI_DOCS__HYDE__MAX_TOKENS=150
 AI_DOCS__HYDE__TEMPERATURE=0.7
-AI_DOCS__HYDE__NUM_GENERATIONS=5            # Number of hypothetical docs to generate
-AI_DOCS__HYDE__CACHE_TTL=3600               # HyDE cache TTL in seconds
-AI_DOCS__HYDE__PREFETCH_LIMIT=50            # Query API prefetch limit for HyDE
-AI_DOCS__HYDE__QUERY_WEIGHT=0.3             # Weight for original query (vs 0.7 for HyDE)
+AI_DOCS__HYDE__NUM_GENERATIONS=5  # simple: 3
+AI_DOCS__HYDE__PREFETCH_LIMIT=50
+AI_DOCS__HYDE__QUERY_WEIGHT=0.3
 
-# Chunking Strategy Configuration
-AI_DOCS__CHUNKING__STRATEGY=enhanced           # basic, enhanced, or ast
-AI_DOCS__CHUNKING__MAX_CHUNK_SIZE=1600
-AI_DOCS__CHUNKING__MIN_CHUNK_SIZE=200
-AI_DOCS__CHUNKING__OVERLAP=200
+# RAG (Retrieval Augmented Generation) - enterprise only
+AI_DOCS__RAG__ENABLED=false  # true for enterprise
+AI_DOCS__RAG__MODEL=gpt-4
+AI_DOCS__RAG__MAX_TOKENS=2000
+AI_DOCS__RAG__TEMPERATURE=0.1
+AI_DOCS__RAG__MAX_CONTEXT_LENGTH=8000
 
-# Batch Processing
-AI_DOCS__BATCH__EMBEDDING_BATCH_SIZE=100
-AI_DOCS__BATCH__CRAWL_BATCH_SIZE=50
-AI_DOCS__BATCH__ENABLE_PROGRESS_BAR=true
+# ========== Qdrant Settings ==========
+AI_DOCS__QDRANT__DEFAULT_COLLECTION=documentation
+AI_DOCS__QDRANT__GRPC_PORT=6334
+AI_DOCS__QDRANT__USE_GRPC=false  # true for enterprise performance
 
-# ========== Browser Automation Configuration ==========
-# Used for complex scraping scenarios requiring JavaScript execution
-
-# Browser Automation Hierarchy Settings
-AI_DOCS__BROWSER__DEFAULT_TOOL=crawl4ai      # crawl4ai, browser_use, playwright
-AI_DOCS__BROWSER__ENABLE_FALLBACK=true       # Enable automatic fallback
-AI_DOCS__BROWSER__HEADLESS=true              # Run browsers in headless mode
-AI_DOCS__BROWSER__TIMEOUT=30000              # Page timeout in milliseconds
-
-# browser-use AI Configuration (for complex dynamic content with multi-LLM support)
-AI_DOCS__BROWSER_USE__LLM_PROVIDER=openai    # openai, anthropic, gemini, local
-AI_DOCS__BROWSER_USE__MODEL=gpt-4o-mini      # Cost-optimized model for routine tasks
-AI_DOCS__BROWSER_USE__MAX_STEPS=20           # Maximum AI steps per task
-AI_DOCS__BROWSER_USE__MAX_RETRIES=3          # Retry attempts for failed tasks
-AI_DOCS__BROWSER_USE__GENERATE_GIF=false     # Generate GIF recordings of tasks
-AI_DOCS__BROWSER_USE__DISABLE_SECURITY=false # Keep security features enabled
-
-# Playwright Configuration (for maximum control)
-AI_DOCS__PLAYWRIGHT__BROWSER=chromium        # chromium, firefox, webkit
-AI_DOCS__PLAYWRIGHT__VIEWPORT_WIDTH=1920     # Browser viewport width
-AI_DOCS__PLAYWRIGHT__VIEWPORT_HEIGHT=1080    # Browser viewport height
-
-# ========== Reranking Configuration ==========
-# BGE-reranker-v2-m3 for 10-20% accuracy improvement
-
-AI_DOCS__RERANKING__ENABLED=false            # Enable reranking (opt-in)
-AI_DOCS__RERANKING__MODEL=BAAI/bge-reranker-v2-m3
-AI_DOCS__RERANKING__TOP_K=20                 # Candidates to rerank
-AI_DOCS__RERANKING__CACHE_TTL=3600           # Cache reranked results for 1 hour
-AI_DOCS__RERANKING__BATCH_SIZE=32            # Reranking batch size
-
-# ========== Query API Configuration ==========
-# Qdrant Query API multi-stage retrieval settings
-
-AI_DOCS__QUERY_API__PREFETCH_LIMIT=100       # Initial prefetch size
-AI_DOCS__QUERY_API__HNSW_EF=128              # HNSW search parameter
+# Query settings
+AI_DOCS__QUERY_API__PREFETCH_LIMIT=100  # simple: 50
+AI_DOCS__QUERY_API__HNSW_EF=128
 AI_DOCS__QUERY_API__QUANTIZATION_RESCORE=true
-AI_DOCS__QUERY_API__OVERSAMPLING=2.0         # Quantization oversampling
+AI_DOCS__QUERY_API__OVERSAMPLING=2.0
 
-# ========== Crawl4AI Specific Settings ==========
-# High-performance web scraping configuration
+# ========== Security Settings ==========
+AI_DOCS__SECURITY__MAX_QUERY_LENGTH=1000
+AI_DOCS__SECURITY__MAX_URL_LENGTH=2048
+AI_DOCS__SECURITY__RATE_LIMIT_REQUESTS_PER_MINUTE=60  # simple: 50, enterprise: 1000
+AI_DOCS__SECURITY__ALLOWED_DOMAINS=["*"]  # JSON array, restrict in production
+AI_DOCS__SECURITY__REQUIRE_API_KEYS=false  # true for enterprise
+AI_DOCS__SECURITY__ENABLE_RATE_LIMITING=true
 
-AI_DOCS__CRAWL4AI__BROWSER_TYPE=chromium     # Browser to use
-AI_DOCS__CRAWL4AI__MAX_CONCURRENT=10         # Concurrent pages
-AI_DOCS__CRAWL4AI__PAGE_TIMEOUT=30000        # Page load timeout
-AI_DOCS__CRAWL4AI__FETCH_TIMEOUT=10000       # Fetch timeout
-AI_DOCS__CRAWL4AI__USER_AGENT=AIDocs/1.0     # Custom user agent
-AI_DOCS__CRAWL4AI__CACHE_MODE=enabled        # Enable content caching
-AI_DOCS__CRAWL4AI__EXTRACTION_STRATEGY=semantic  # Extraction type
-AI_DOCS__CRAWL4AI__LLM_PROVIDER=ollama/llama2    # LLM for extraction
+# Circuit Breaker (enterprise)
+AI_DOCS__CIRCUIT_BREAKER__ENABLED=false  # true for enterprise
+AI_DOCS__CIRCUIT_BREAKER__FAILURE_THRESHOLD=5
+AI_DOCS__CIRCUIT_BREAKER__RECOVERY_TIMEOUT=60.0
 
-# ========== Collection Aliases Configuration ==========
-# Production deployment patterns
+# Drift Detection (enterprise)
+AI_DOCS__DRIFT_DETECTION__ENABLED=false  # true for enterprise
+AI_DOCS__DRIFT_DETECTION__SNAPSHOT_INTERVAL_MINUTES=15
 
-AI_DOCS__ALIASES__ENABLE_ALIASES=true        # Enable collection aliases
-AI_DOCS__ALIASES__ACTIVE_ALIAS=active        # Active collection alias
-AI_DOCS__ALIASES__STAGING_ALIAS=staging      # Staging collection alias
-AI_DOCS__ALIASES__DEPLOYMENT_STRATEGY=blue_green  # blue_green, canary, ab_test
+# ========== Chunking Strategy ==========
+AI_DOCS__CHUNKING__STRATEGY=enhanced  # basic (simple), enhanced (enterprise), ast
+AI_DOCS__CHUNKING__MAX_CHUNK_SIZE=1600  # simple: 1000
+AI_DOCS__CHUNKING__MIN_CHUNK_SIZE=200
+AI_DOCS__CHUNKING__OVERLAP=200  # simple: 50
 
-# ========== Docker Compose Environment Variables ==========
-# These are used by docker-compose.yml for Qdrant and DragonflyDB
+# ========== Directory Paths ==========
+AI_DOCS__DATA_DIR=./data
+AI_DOCS__CACHE_DIR=./cache
+AI_DOCS__LOGS_DIR=./logs
 
-# Qdrant Performance Settings
-QDRANT__SERVICE__HTTP_PORT=6333
-QDRANT__SERVICE__GRPC_PORT=6334
-QDRANT__LOG_LEVEL=INFO
-QDRANT__STORAGE__ON_DISK_PAYLOAD=true
-QDRANT__STORAGE__QUANTIZATION__ALWAYS_RAM=true
-QDRANT__STORAGE__PERFORMANCE__MAX_SEARCH_THREADS=8
+# ========== Browser Automation (Optional) ==========
+AI_DOCS__BROWSER__DEFAULT_TOOL=crawl4ai  # crawl4ai, browser_use, playwright
+AI_DOCS__BROWSER__ENABLE_FALLBACK=true
+AI_DOCS__BROWSER__HEADLESS=true
+AI_DOCS__BROWSER__TIMEOUT=30000
 
-# DragonflyDB Settings
-DRAGONFLY_THREADS=8
-DRAGONFLY_MEMORY_LIMIT=4gb
-DRAGONFLY_SNAPSHOT_INTERVAL=3600
+# browser-use (enterprise, for complex JS sites)
+AI_DOCS__BROWSER_USE__ENABLED=false  # true for enterprise
+AI_DOCS__BROWSER_USE__LLM_PROVIDER=openai
+AI_DOCS__BROWSER_USE__MODEL=gpt-4o-mini
+AI_DOCS__BROWSER_USE__MAX_STEPS=20
 
-# ========== Testing Environment Variables ==========
-# These are used for integration tests
+# Playwright (alternative browser automation)
+AI_DOCS__PLAYWRIGHT__BROWSER=chromium
+AI_DOCS__PLAYWRIGHT__VIEWPORT_WIDTH=1920
+AI_DOCS__PLAYWRIGHT__VIEWPORT_HEIGHT=1080
 
-# Enable real integration tests (default: false for safety)
+# ========== Re-ranking (Enterprise Only) ==========
+AI_DOCS__RERANKING__ENABLED=false  # true for enterprise
+AI_DOCS__RERANKING__MODEL=BAAI/bge-reranker-v2-m3
+AI_DOCS__RERANKING__TOP_K=20  # simple: 10
+AI_DOCS__RERANKING__BATCH_SIZE=32
+
+# ========== Deployment Features (Enterprise Only) ==========
+AI_DOCS__DEPLOYMENT__ENABLED=false  # true for enterprise
+AI_DOCS__DEPLOYMENT__STRATEGY=blue_green  # blue_green, canary
+AI_DOCS__ALIASES__ENABLE_ALIASES=false  # true for enterprise
+AI_DOCS__ALIASES__ACTIVE_ALIAS=active
+
+# Database (enterprise, PostgreSQL)
+AI_DOCS__DATABASE__ENABLED=false  # true for enterprise
+AI_DOCS__DATABASE__URL=postgresql+asyncpg://user:pass@localhost:5432/ai_docs
+AI_DOCS__DATABASE__POOL_SIZE=20  # simple: 5
+
+# Task Queue (enterprise)
+AI_DOCS__TASK_QUEUE__ENABLED=false  # true for enterprise
+AI_DOCS__TASK_QUEUE__MAX_JOBS=20
+AI_DOCS__TASK_QUEUE__JOB_TIMEOUT=600
+
+# Observability (enterprise)
+AI_DOCS__OBSERVABILITY__ENABLED=false  # true for enterprise
+AI_DOCS__OBSERVABILITY__OTLP_ENDPOINT=http://localhost:4317
+AI_DOCS__OBSERVABILITY__TRACE_SAMPLE_RATE=1.0
+
+# Monitoring (enterprise)
+AI_DOCS__MONITORING__ENABLED=false  # true for enterprise
+AI_DOCS__MONITORING__ENABLE_METRICS=true
+
+# ========== Crawl4AI Settings ==========
+AI_DOCS__CRAWL4AI__BROWSER_TYPE=chromium
+AI_DOCS__CRAWL4AI__MAX_CONCURRENT=10  # simple: 2
+AI_DOCS__CRAWL4AI__PAGE_TIMEOUT=30000
+AI_DOCS__CRAWL4AI__USER_AGENT=AIDocs/1.0
+AI_DOCS__CRAWL4AI__CACHE_MODE=enabled
+AI_DOCS__CRAWL4AI__EXTRACTION_STRATEGY=semantic
+
+# ========== Testing Overrides ==========
+# Set RUN_REAL_INTEGRATION_TESTS=true to use real services in tests
 RUN_REAL_INTEGRATION_TESTS=false
+CRAWL4AI_TIMEOUT=30000  # Test timeout
 
-# Crawl4AI timeout for tests (milliseconds)
-CRAWL4AI_TIMEOUT=30000
-
-# Test API keys (use these exact values for unit tests)
-# AI_DOCS__TEST__OPENAI_API_KEY=sk-test-mock-key-for-testing-only
-# AI_DOCS__TEST__FIRECRAWL_API_KEY=fc-test-mock-key-for-testing-only
+# For comprehensive mode-specific settings, see docs/developers/configuration.md
