docs: enhance GPU acceleration documentation and update pytest configuration
CHANGES MADE:
- Added a comprehensive GPU Acceleration Guide detailing installation, usage, and performance optimization for GPU features.
- Updated pytest.ini to include new markers for GPU-related tests and removed the deprecated strict-markers option.

RESULT: Improved documentation clarity and expanded testing capabilities for GPU functionalities, ensuring better support for developers utilizing GPU acceleration.

--- a/pytest.ini
+++ b/pytest.ini
@@ -11,9 +11,8 @@ python_classes = Test* *Test *Tests
 norecursedirs = .git .tox dist build *.egg .venv __pycache__ .mypy_cache .pytest_cache .ruff_cache node_modules
 
 # Output formatting - CI-friendly with parallel execution optimization
-addopts = 
+addopts =
     --tb=short
-    --strict-markers
     --strict-config
     --disable-warnings
     -ra
@@ -133,6 +132,7 @@ markers =
     owasp: marks tests as OWASP compliance tests
     encryption: marks tests as encryption tests
     input_validation: marks tests as input validation tests
+    rate_limit: marks tests as rate limiting tests
     
     # Infrastructure
     browser: marks tests requiring browser automation
@@ -172,10 +172,17 @@ markers =
     accessibility: marks tests as accessibility tests
     a11y: marks tests as general accessibility tests
     wcag: marks tests as WCAG compliance tests
+    # rate_limit already defined above
     
     # Test framework
     asyncio: marks async tests
     hypothesis: marks property-based tests using Hypothesis
+    # GPU acceleration
+    gpu: marks tests requiring GPU acceleration
+    gpu_required: marks tests that require GPU and should be skipped if unavailable
+    gpu_optional: marks tests that can use GPU but work without it
+    gpu_memory: marks tests that require specific GPU memory amounts
+    gpu_performance: marks tests for GPU performance benchmarking
     property: marks tests as property-based tests
 
 # Async configuration
