--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,6 +97,7 @@ dependencies = [
     "opentelemetry-instrumentation-fastapi>=0.58b0,<0.59.0",
     # Development and utility tools
     "ruff>=0.13.1,<0.14.0",
+    "pylint>=3.3.8,<4.0.0",
     "pyright>=1.1.379,<2.0.0",
     "taskipy>=1.14.1,<2.0.0",
     "dependency-injector>=4.48.2",
@@ -121,6 +122,7 @@ dev = [
     "fakeredis>=2.31.3,<3.0.0",
     "coverage>=7.6.0,<8.0.0",
     "ruff>=0.13.1,<0.14.0",
+    "pylint>=3.3.8,<4.0.0",
     "pyright>=1.1.379,<2.0.0",
     "locust>=2.37.10,<3.0.0",
     "pyjwt>=2.10.1,<3.0.0",
