--- a/pyproject.toml
+++ b/pyproject.toml
@@ -475,3 +475,26 @@ dev = [
     "pytest-timeout>=2.4.0,<3.0.0",
     "pytest-env>=1.1.5,<2.0.0",
 ]
+
+[tool.pylint]
+[tool.pylint.main]
+# Basic configuration
+extension-pkg-allow-list = ["pydantic"]
+reports = false
+score = true
+
+[tool.pylint.messages_control]
+# Conservative disable list - only genuinely problematic rules
+disable = [
+    "too-few-public-methods",  # Common in test classes with just __init__
+    "missing-class-docstring", # Test classes often don't need docstrings
+    "missing-function-docstring", # Test functions often don't need docstrings
+    "invalid-name", # Test functions/methods often use unconventional names
+    "protected-access", # Tests often need to access protected members
+    "broad-except", # Tests may use broad exception handling for mocking
+    # Test-specific rules that are commonly problematic
+    "unused-argument", # W0613 - Fixtures and mocks often have unused parameters
+    "redefined-outer-name", # W0621 - Common when fixtures redefine names
+    "pointless-string-statement", # W0105 - Duplicate docstrings in test classes
+    "line-too-long", # C0301 - Test code often has long lines due to complex setup
+]
